fix copypaste bug, fix CONFIGURATION_STORE_INITIALIZED handler intialization bug